--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Secend<sup><span class=entry-isdraft>&nbsp;&nbsp;[draft]</span></sup>
+</h2>
+</header>
+<section class=entry-content>
+<p>http.HandleFunc("/resources/spirit", func(w http.ResponseWriter, r *http.Request) { data := "" if true { roleId, _ := strconv.ParseInt(r.FormValue("roleId"), 10, 64) t, _ := strconv.ParseInt(r.FormValue("serverId"), 10, 32) serverId := int32(t) userId, _ := strconv.Atoi(r.FormValue("userId")) data = service.Spirit(serverId, userId, roleId) } //res,_ := json.Marshal(data) //log.Printf("客户端请求智能体:/resources/spirit %+v, %s\n", r, data) w.Write([]byte(data)) }) </p>
+</section>
+<footer class=entry-footer>October 29, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
+<a class=entry-link aria-label="post link to Secend" href=https://damon-zhangb.github.io/posts/secend/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>Hugo config配置示例
 </h2>
 </header>
